<resources>
    <string name="app_name">WGU MOBILE APPLICATION</string>
    <string name="wgu_mobile_applications">WGU MOBILE APPLICATIONS</string>
    <string name="term_view">Term Creation</string>
    <string name="mentor_edit">Mentor Creation</string>
    <string name="course_edit">Course Creation</string>
    <string name="title_activity_term_view">TermView</string>
    <string name="title_activity_term_detail">TermDetail</string>
    <string name="title_activity_mentor_list">MentorList</string>
    <string name="title_activity_course_list">CourseList</string>
    <string name="title_activity_mentor_detail">MentorDetail</string>
    <string name="mentor_name">Mentor Name:  </string>
    <string name="work_email">Work Email:  </string>
    <string name="home_email">Home Email:  </string>
    <string name="home_phone">Home Phone:  </string>
    <string name="work_phone">Work Phone:  </string>
    <string name="mentor_course_assignments">Course:  </string>
    <string name="title_activity_course_detail">CourseDetail</string>
    <string name="title">Title:</string>
    <string name="title_activity_term_course_detail">TermCourseDetail</string>
    <string name="start_date">Start Date:</string>
    <string name="alarm">Alarm </string>
    <string name="end_date">End Date:</string>
    <string name="notes">NOTES:</string>
    <string name="ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit. Sed lectus. Integer euismod lacus luctus magna. Quisque cursus, metus vitae pharetra auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor. Sed non quam. In vel mi sit amet augue congue elementum. Morbi in ipsum sit amet pede facilisis laoreet. Donec lacus nunc, viverra nec, blandit vel, egestas et, augue. Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim. Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper.</string>
    <string name="title_activity_assessment_list">AssessmentList</string>
    <string name="title_activity_assessment_detail">AssessmentDetail</string>
    <string name="assessment_title">Type:</string>
    <string name="assessment_due">Due:</string>
    <string name="completion_date">Completed: </string>
    <string name="status">Status:</string>
    <string name="assessment_list">Assessment List</string>
    <string name="assigned_mentors">MENTOR LIST</string>
    <string name="mentor_to_course_assignments">Mentor to Course Assignments.</string>
    <string name="take_or_show_picture">Take or show picture</string>
    <string name="action_settings">settings</string>
    <string name="about">about</string>
    <string name="shopping_cart">cart</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="select_mentor">Select Mentor</string>
    <string name="term_title">Term Title:</string>
    <string name="course">Course:</string>
    <string name="share_notes">share notes</string>
    <string name="administration">ADMINISTRATION</string>
    <string name="created_terms">Created Terms</string>
    <string name="assigned_courses">Assigned Courses</string>
</resources>
