<?xml version="1.0" encoding="utf-8"?>
<!--CREATED BY MORRIS BUEL FOR WGU MOBILE APPLICATIONS COURSE
    DATE: 04-11-2017 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wgu.mbuel.wgumobileapp.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:lineSpacingExtra="14sp"
        android:text="@string/wgu_mobile_applications"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnMentorEdit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="@string/administration"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnTermView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:text="@string/term_view" />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_below="@+id/btnTermView"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnMentorEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/space"
        android:text="@string/mentor_edit" />

    <Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_below="@+id/btnMentorEdit"
        android:layout_toEndOf="@+id/space"
        android:layout_toRightOf="@+id/space" />

    <Button
        android:id="@+id/btnCourseEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/space2"
        android:text="@string/course_edit" />

</RelativeLayout>
