<?xml version="1.0" encoding="utf-8"?>
<com.wgu.mbuel.wgumobileapp.app.SoftKeyboardLsnedRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityAssessmentDetail"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wgu.mbuel.wgumobileapp.AssessmentSelection">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarAssessmentDetail">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/textViewAssessmentCourseTitle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:padding="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/editTextAssessmentType"
        android:layout_below="@+id/appBarAssessmentDetail" />

    <EditText
        android:id="@+id/editTextAssessmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/appBarAssessmentDetail"
        android:layout_toEndOf="@+id/textViewAssessmentCourseTitle"
        android:layout_toRightOf="@+id/textViewAssessmentCourseTitle"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewAssessmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/assessment_title"
        android:layout_toLeftOf="@+id/editTextAssessmentTitle"
        android:layout_toStartOf="@+id/editTextAssessmentTitle"
        android:layout_alignBottom="@+id/editTextAssessmentType"
        android:padding="5dp"
        android:layout_below="@+id/textViewAssessmentCourseTitle" />

    <EditText
        android:id="@+id/editTextAssessmentType"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextAssessmentTitle"
        android:layout_toEndOf="@+id/textViewAssessmentCourseTitle"
        android:layout_toRightOf="@+id/textViewAssessmentCourseTitle"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewAssessmentDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assessment_due"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/editTextAssessmentType"
        android:layout_toStartOf="@+id/editTextAssessmentType"
        android:layout_alignBottom="@+id/editTextAssessmentDueDate"
        android:padding="5dp"
        android:layout_below="@+id/textViewAssessmentTitle" />

    <CheckBox
        android:id="@+id/checkBoxAssessmentAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm"
        android:layout_below="@+id/editTextAssessmentType"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/editTextAssessmentDueDate"
        android:layout_toRightOf="@+id/editTextAssessmentDueDate"

        android:layout_toEndOf="@+id/editTextAssessmentDueDate" />

    <EditText
        android:id="@+id/editTextAssessmentDueDate"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editTextAssessmentType"
        android:layout_toEndOf="@+id/textViewAssessmentTitle"
        android:layout_toRightOf="@+id/textViewAssessmentTitle"
        android:ems="10"
        android:inputType="textFilter|date"
        android:maxLength="10"
        android:text=""
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewAssessmentCompletionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/completion_date"
        android:layout_toLeftOf="@+id/editTextAssessmentDueDate"
        android:layout_toStartOf="@+id/editTextAssessmentDueDate"
        android:layout_alignBottom="@+id/editTextAssessmentCompletionDate"
        android:padding="5dp"
        android:layout_below="@+id/textViewAssessmentDueDate" />

    <EditText
        android:id="@+id/editTextAssessmentCompletionDate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/checkBoxAssessmentAlarm"
        android:layout_toEndOf="@+id/textViewAssessmentDueDate"
        android:layout_toRightOf="@+id/textViewAssessmentDueDate"
        android:ems="10"
        android:inputType="textFilter|date"
        android:maxLength="10"
        android:text=""
        android:textAlignment="center" />

    <!--DONE: Move FAB to here and change image to camera icon. (see notepad example)-->
    <ImageView
        android:id="@+id/imageViewAssessmentCameraCapture"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:srcCompat="@mipmap/take_picture"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/take_or_show_picture" />

    <TextView
        android:id="@+id/textViewAssessmentStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextAssessmentStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewAssessmentCompletionDate"
        android:layout_toLeftOf="@+id/editTextAssessmentCompletionDate"
        android:layout_toStartOf="@+id/editTextAssessmentCompletionDate"
        android:padding="5dp"
        android:text="@string/status"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editTextAssessmentStatus"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextAssessmentCompletionDate"
        android:layout_toEndOf="@+id/textViewAssessmentCompletionDate"
        android:layout_toRightOf="@+id/textViewAssessmentCompletionDate"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewAssessmentNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:layout_below="@+id/textViewAssessmentStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp"
        android:layout_marginTop="@dimen/textViewMargin"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/imageViewAssessmentCameraCapture"
        android:id="@+id/scrollView3"
        android:layout_toRightOf="@+id/textViewAssessmentNotes"
        android:layout_toEndOf="@+id/textViewAssessmentNotes"
        android:layout_below="@+id/textViewAssessmentStatus">

        <EditText
            android:id="@+id/editTextAssessmentNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text=""
            android:textAlignment="center" />

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAssessmentList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@mipmap/take_picture"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="59dp" />

</com.wgu.mbuel.wgumobileapp.app.SoftKeyboardLsnedRelativeLayout>
